; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_CreateLocalPredicateLockHash.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_CreateLocalPredicateLockHash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@LocalPredicateLockHash = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [21 x i8] c"Local predicate lock\00", align 1
@max_predicate_locks_per_xact = common dso_local global i32 0, align 4
@HASH_ELEM = common dso_local global i32 0, align 4
@HASH_BLOBS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @CreateLocalPredicateLockHash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CreateLocalPredicateLockHash() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = load i32*, i32** @LocalPredicateLockHash, align 8
  %3 = icmp eq i32* %2, null
  %4 = zext i1 %3 to i32
  %5 = call i32 @Assert(i32 %4)
  %6 = call i32 @MemSet(%struct.TYPE_4__* %1, i32 0, i32 8)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 4, i32* %7, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  store i32 4, i32* %8, align 4
  %9 = load i32, i32* @max_predicate_locks_per_xact, align 4
  %10 = load i32, i32* @HASH_ELEM, align 4
  %11 = load i32, i32* @HASH_BLOBS, align 4
  %12 = or i32 %10, %11
  %13 = call i32* @hash_create(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %9, %struct.TYPE_4__* %1, i32 %12)
  store i32* %13, i32** @LocalPredicateLockHash, align 8
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @MemSet(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32* @hash_create(i8*, i32, %struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
